--- a/css/konafa.css
+++ b/css/konafa.css
@@ -1,6 +1,6 @@
 body {
   direction: rtl;
-  font-family: "Rakkas", sans-serif;
+  font-family: "Lemonada", sans-serif;
   text-align: center;
   background-color: #f5f5f5;
   margin: 0;
