--- a/css/konafa.css
+++ b/css/konafa.css
@@ -15,6 +15,11 @@ h2 {
   color: #333;
   text-transform: uppercase;
 }
+.flexo {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
 label {
   font-size: 18px;
   color: #555;
