--- a/css/konafa.css
+++ b/css/konafa.css
@@ -2,27 +2,49 @@ body {
   direction: rtl;
   font-family: "Lemonada", sans-serif;
   text-align: center;
-  background-color: #f5f5f5;
+  /* background-color: #f5f5f5; */
+  background-image: url("../imgs/cake.jpg");
+  background-size: 1400px;
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
-.container {
+.lay {
+  background-color: #000;
+  opacity: 0.4;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+.container {  
+  position: absolute;
   width: 400px;
-  margin: 50px auto 0;
+  z-index: 1;
+  animation: show 2.5s ease forwards;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
 }
 h2 {
   margin-top: 50px;
-  color: #333;
+  color: #fff;
   text-transform: uppercase;
+  animation: textSpaceAnimation 2.5s ease forwards;
+}
+h3 {
+  color: #eee;
 }
 .flexo {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  animation: appear 2.5s ease forwards;
 }
 label {
   font-size: 18px;
-  color: #555;
+  color: #ccc;
   display: block;
   margin-top: 20px;
 }
@@ -33,6 +55,8 @@ input[type="text"] {
   border: 2px solid #ccc;
   border-radius: 5px;
   transition: border-color 0.3s ease;
+  text-align: center;
+
 }
 input[type="text"]:focus {
   outline: none;
@@ -63,7 +87,16 @@ button:hover {
 #output.show {
   transform: translateY(0);
 }
-@keyframes fadeIn {
+@keyframes show {
+  from {
+    top: 0%;
+  }
+  to {
+    top: 40%;
+  }
+}
+
+@keyframes appear {
   from {
     opacity: 0;
   }
@@ -71,6 +104,25 @@ button:hover {
     opacity: 1;
   }
 }
-.fade-in {
-  animation: fadeIn 0.5s ease forwards;
+
+
+@keyframes textSpaceAnimation {
+  from {
+    letter-spacing: -15px;
+  }
+  to {
+    letter-spacing: 0;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .container {
+    width: 60%;
+  }
+  h2 {
+    font-size: 27px;
+  }
+  h3 {
+    font-size: 17px;
+  }
 }
