--- a/css/konafa.css
+++ b/css/konafa.css
@@ -2,9 +2,9 @@ body {
   direction: rtl;
   font-family: "Lemonada", sans-serif;
   text-align: center;
+  /* background-position-y: 1000px; */
   background-image: url("../imgs/sweetss.jpg");
   background-size: cover;
-  /* background-position-y: 1000px; */
   margin: 0;
   padding: 0;
   overflow: hidden;
@@ -29,12 +29,12 @@ body {
 }
 h2 {
   margin-top: 50px;
-  color: #fff;
+  color: #ffff79;
   text-transform: uppercase;
   animation: textSpaceAnimation 2.5s ease forwards;
 }
 h3 {
-  color: #eee;
+  color: #fff;
 }
 .flexo {
   display: flex;
@@ -44,7 +44,7 @@ h3 {
 }
 label {
   font-size: 18px;
-  color: #ccc;
+  color: #ffff79;
   display: block;
   margin-top: 20px;
 }
@@ -62,13 +62,13 @@ input[type="text"] {
 }
 input[type="text"]:focus {
   outline: none;
-  border-color: #ffce79;
+  border-color: #ffff79;
 }
 button {
   font-family: "Lemonada", sans-serif;
   padding: 15px 30px;
-  background-color: #ffb330;
-  color: #333;
+  background-color: #ffa200;
+  color: #fff;
   font-weight: bold;
   border: none;
   cursor: pointer;
@@ -77,7 +77,7 @@ button {
   transition: background-color 0.3s ease;
 }
 button:hover {
-  background-color: #da9c32;
+  background-color: #ffb330;
 }
 #output {
   font-size: 20px;
@@ -142,6 +142,9 @@ button:hover {
   }
   h3 {
     font-size: 17px;
+  }
+  #output {
+    font-size: 15px;
   }
   .baka {
     display: none;
